add section about local development setup to contribution.md